@@ -1,5 +1,6 @@
 
 0.9.9d Nov 17, 2004
+ * added FAQ: 48. How can I search the contents of a package for a file or library?
  * added czech translation by Oto Petrik
  * made head_mirror_data clear_head_cache write_head_cache read_head_cache
    gen_filename_from_url gen_head_cache_filename get_md5sum non static
